@@ -90,9 +90,11 @@ WebPageProxy* WebInspectorProxy::platformCreateInspectorPage()
 #if USE(ACCELERATED_COMPOSITING) && defined HAVE_ECORE_X
     const char* engine = "opengl_x11";
     m_inspectorWindow = ecore_evas_new(engine, 0, 0, initialWindowWidth, initialWindowHeight, 0);
-#else
-    m_inspectorWindow = ecore_evas_new(0, 0, 0, initialWindowWidth, initialWindowHeight, 0);
+
+    // Gracefully fall back to software if evas_gl engine is not available.
+    if (!m_inspectorWindow)
 #endif
+        m_inspectorWindow = ecore_evas_new(0, 0, 0, initialWindowWidth, initialWindowHeight, 0);
     if (!m_inspectorWindow)
         return 0;
 
